assets/css/main.css
/* ... */
@media screen and (max-width:768px) {
	#about-page .looknum {
		padding: 0 10px;
		width: 15%;
		max-width: 75px;
		margin-bottom: 15px;
	}
	#about-page .plata-2 {
		margin-top: -100px;
		background-size: 150px auto;
		background-position: 90% top;
	}
	#about-page .boat {
		height: 60px;
	}
}
@media screen and (max-width:480px) {
	#about-page .looknum {
		display: none;
	}
}

#about-page .big-text {
	display:inline-block;
	color: #fff;
}

#category-page {
	padding-top: 0px;
	color: #000;
}

#category-page .description {
	min-height: 180px;
	font-size: 20px;
	font-family: 'CSPraJad';
	max-width: 450px;
	margin: auto;
	text-align: center;
	margin-top: 5px;
}
@media screen and (max-width:768px) {
	#category-page .description {
		max-width: 250px;
	}
}

#category-page .count-box {
	padding: 5px 0px;
	margin: auto;
	font-size: 22px;
	border-radius: 5px;
	color: #fff;
	width: 150px;
	text-align: center;
}

#category-page .cat-text {
	font-size: 30px;
	margin-top:20px;
}
@media screen and (max-width:480px) {
	#category-page .cat-text {
		font-size: 26px;
	}
}

#category-page .register {
	cursor:pointer;
	margin-top: 20px;
	margin-bottom: 50px;
	width: 170px;
}

#category-page .head {
	max-width : 240px;
}

@media screen and (max-width:768px) {
	#category-page .register {
		margin-top: 15px;
	}
	#category-page .head {
		max-width: 200px;
	}
}

#sponsor-page {
	padding-top: 0px;
}

#sponsor-page .col-xs-6 {
	padding: 0 60px;
}

#sponsor-page .big-text {
	text-shadow: 2px 2px 0px rgba(0,0,0,0.3);
}

@media screen and (max-width: 991px) {
	#sponsor-page .col-xs-6 {
		padding: 0 30px;
	}
}

@media screen and (max-width: 768px) {
	#sponsor-page .col-xs-6 {
		padding: 0 10px;
	}
}

@media screen and (max-width: 480px) {
	#sponsor-page .col-xs-6 {
		padding: 0px;
	}
}


#timeline-page {
	background-image: url(../img/main/timeline_bottom.png);
	background-size: 100% auto;
	background-position:top center;
}

#timeline-page .timeline {
  position: relative;
  font-size: 1.6em;
  margin: 8% auto 5% 40%;
  border-left: 4px solid #fff;
}

#timeline-page .timeline-item {
	position: relative;
	margin: 0 0 50px 60px;
}

#timeline-page .timeline-fish {
	position: absolute;
	top: -22px;
	right: 98%;
	width: 160px;
}

@media screen and (max-width:480px) {
	#timeline-page .timeline-item {
		margin: 0 0 30px 20px;
		font-size: 18px;
	}
	#timeline-page .timeline-fish {
	  top: -20px;
	  width: 130px;
	}
}

#picture-page {
	background: url("../img/main/activity.png");
	background-size: cover;
	background-position: center center;
	color: #000;
}

#picture-page .table-picture img {
	margin-bottom: 10px;
}

#picture-page .table-picture .row img {
	box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.1);
}

#picture-page .col-md-4,#picture-page .col-md-3,#picture-page .col-md-6 {
	padding-left: 5px;
	padding-right: 5px;
}

#picture-page .social {
	margin-top:60px;
}

#picture-page .social p {
	font-size: 2em;
}

#picture-page .social a img {
	width: 70px;
	margin-left:30px;
}

#category-page .big-text, #sponsor-page .big-text {
	padding-top:30px;
}
@media screen and (max-width:768px) {
	#category-page .big-text, #sponsor-page .big-text {
		padding-top:50px;
	}
}

#qa-page {
	padding-top: 10px;
	padding-bottom: 0px;
}

#qa-page .big-text {
	font-size: 40px;
}
@media screen and (max-width:480px) {
	#qa-page .big-text {
		font-size: 36px;
	}
}

#qa-page .folded-container {
	margin-bottom:30px;
	overflow: hidden;
}

#qa-content,#qa-page .head {
	background: #f3ddad;
	color: #000;
	font-family: 'CSPraJad';
}

#qa-page .head, #qa-content .tail {
	cursor: pointer;
	background-size: auto 50px;
	background-position: center bottom;
	background-repeat: no-repeat;
}
#qa-content .head {
	background-image: url(../img/main/faq_show.png);
}
#qa-content .tail {
	background-image: url(../img/main/faq_hide.png);
}
@media screen and (max-width:480px) {
	#qa-page .head, #qa-page .tail {
		background-size: auto 40px;
	}
}

#qa-content .arrow {
	padding:0px;
	margin:0px;
	max-height: 50px;
	position: relative;
	top: -5px;
}

#qa-content .arrow-boy { right: -8px; }
#qa-content .arrow-girl { left: -8px; }

#qa-content .icon {
	padding:0px;
	margin:0px;
	max-width: 60px;
}

#qa-content .sentence:nth-child(odd) {
	background-color: #e7d2a3;
}

#qa-content .sentence {
	text-align: center;
	padding: 20px 25px;
}
@media screen and (max-width:768px) {
	#qa-content .sentence {
		padding: 15px 10px;
	}
}

#qa-page .head,#qa-content .tail {
	cursor: pointer;
	font-family: 'wdb_bangnaregular';
	padding: 40px 0px 80px;
}

#qa-content .sentence .white {
	background-color: #fff;
	padding: 10px 30px;
	border-radius: 8px;
}

#qa-content .sentence .blue {
	margin-bottom:20px;
	background-color: #0084ff;
	color: #fff;
	padding: 10px 30px;
	border-radius: 8px;
}
#qa-content .sentence .white, #qa-content .sentence .blue {
	font-size:22px;
	max-width: 550px;
}
@media screen and (max-width: 1199px) {
	#qa-content .sentence .white, #qa-content .sentence .blue {
		max-width: 450px;
	}
}
@media screen and (max-width:768px) {
	#qa-content .sentence .blue {
		margin-bottom:7px;
	}
}
@media screen and (max-width: 640px) {
	#qa-content .sentence .white, #qa-content .sentence .blue {
		padding: 10px 15px;
		font-size: 20px;
		max-width: 300px;
	}
}
@media screen and (max-width: 480px) {
	#qa-content .sentence .white, #qa-content .sentence .blue {
		padding: 10px;
		font-size: 18px;
		max-width: 180px;
	}
}

#qa-content .sentence  {
	display: block;
}

#qa-content .chat-box  {
	display: block;
}

#qa-content .chat-box * {
	display: inline-block;
	vertical-align: middle;
	margin: 5px 0px;
}

@media screen and (max-width:768px) {
	#qa-content .arrow {
		display:none;
	}
	#qa-content .sentence .white {
		margin-right: 5px;
	}
	#qa-content .sentence .blue {
		margin-left: 5px;
	}
}
/* ... */

